cmake_minimum_required(VERSION 3.27)
project(interpreter)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(cell)
add_subdirectory(symbol)
add_subdirectory(symbol_table)
add_subdirectory(object_factory)
add_subdirectory(value)
add_subdirectory(overload)
add_subdirectory(visit)
add_subdirectory(nodes)
add_subdirectory(ast)
add_subdirectory(ast_printer)
